# mashov.py

./: .coverage  .gitignore  .travis.yml  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
docs/source/: conf.py  index.rst
mashov/: __init__.py  client.py  client_helper_funcs.py  exceptions.py  functions.py  grade.py  school.py  token_client.py  username_password_client.py
mashov/models/: __init__.py  grade.py  grading_event.py  group.py  school.py
tests/: test_client_auth.py  test_client_helpers.py  test_mashov.py  test_school.py
