[tool.poetry]
name = "mashov"
version = "0.1.0"
description = "An API wrapper for Mashov written in Python"
authors = ["arielbeje <arielbeje@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
rope = "^0.14.0"
flake8 = "^3.7"
yapf = "^0.28.0"
responses = "^0.10.6"
coverage = "^4.5"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
